--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17",
-    "@react-native-community/datetimepicker": "8.4.1"
+    "@react-native-community/datetimepicker": "8.4.1",
+    "expo-updates": "~0.28.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
