--- a/package.json
+++ b/package.json
@@ -36,7 +36,11 @@
     "react-native-web": "~0.20.0",
     "tailwindcss": "^3.4.17",
     "@react-native-community/datetimepicker": "8.4.1",
-    "expo-updates": "~0.28.17"
+    "expo-updates": "~0.28.17",
+    "expo-print": "~14.1.4",
+    "expo-sharing": "~13.1.5",
+    "expo-file-system": "~18.1.11",
+    "expo-media-library": "~17.1.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
