--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -14,33 +14,35 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.22",
     "expo-checkbox": "~4.1.4",
+    "expo-constants": "~17.1.7",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-linking": "~7.1.7",
-    "expo-router": "~5.1.5",
+    "expo-media-library": "~17.1.7",
+    "expo-print": "~14.1.4",
+    "expo-router": "~5.1.6",
+    "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.11",
+    "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "firebase": "^12.2.1",
-    "nativewind": "^4.1.23",
+    "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.6",
+    "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "tailwindcss": "^3.4.17",
-    "@react-native-community/datetimepicker": "8.4.1",
-    "expo-updates": "~0.28.17",
-    "expo-print": "~14.1.4",
-    "expo-sharing": "~13.1.5",
-    "expo-file-system": "~18.1.11",
-    "expo-media-library": "~17.1.7"
+    "react-native-worklets-core": "^1.6.2",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
