--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.22",
+    "expo": "~53.0.23",
     "expo-checkbox": "~4.1.4",
     "expo-constants": "~17.1.7",
     "expo-file-system": "~18.1.11",
@@ -25,7 +25,7 @@
     "expo-linking": "~7.1.7",
     "expo-media-library": "~17.1.7",
     "expo-print": "~14.1.4",
-    "expo-router": "~5.1.6",
+    "expo-router": "~5.1.7",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -36,13 +36,14 @@
     "nativewind": "^4.2.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
     "react-native-worklets-core": "^1.6.2",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
