--- a/package.json
+++ b/package.json
@@ -13,45 +13,46 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@expo/vector-icons": "^15.0.3",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.23",
-    "expo-checkbox": "~4.1.4",
-    "expo-constants": "~17.1.7",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.2",
-    "expo-linking": "~7.1.7",
-    "expo-media-library": "~17.1.7",
-    "expo-print": "~14.1.4",
-    "expo-router": "~5.1.7",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.11",
-    "expo-updates": "~0.28.17",
-    "expo-web-browser": "~14.2.0",
+    "expo": "54.0.21",
+    "expo-checkbox": "~5.0.7",
+    "expo-constants": "~18.0.10",
+    "expo-file-system": "~19.0.17",
+    "expo-font": "~14.0.9",
+    "expo-linking": "~8.0.8",
+    "expo-media-library": "~18.2.0",
+    "expo-print": "~15.0.7",
+    "expo-router": "~6.0.14",
+    "expo-sharing": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-status-bar": "~3.0.8",
+    "expo-system-ui": "~6.0.8",
+    "expo-updates": "~29.0.12",
+    "expo-web-browser": "~15.0.8",
     "firebase": "^12.2.1",
     "nativewind": "^4.2.1",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.6",
-    "react-native-reanimated": "~3.17.4",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.5",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
+    "react-native-worklets": "0.5.1",
     "react-native-worklets-core": "^1.6.2",
     "tailwindcss": "^3.4.17",
     "yup": "^1.7.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.10",
+    "jest-expo": "~54.0.13",
     "react-test-renderer": "19.0.0",
-    "typescript": "~5.8.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
